--- a/package.json
+++ b/package.json
@@ -4,10 +4,10 @@
   "main": "dist/index.js",
   "types": "dist/index.d.ts",
   "author": "bluetarget",
-  "version": "1.0.2",
+  "version": "1.0.3",
   "private": false,
   "scripts": {
-    "build": "tsc"
+    "deploy": "tsc & npm publish"
   },
   "license": "MIT",
   "repository": {
